--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.0",
+    "nodemailer": "^6.9.4",
     "validator": "^13.9.0"
   },
   "devDependencies": {
